--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -30,7 +30,7 @@
             <Button Grid.Column="7" Grid.Row="1" Margin="15" Grid.RowSpan="1" Click="AddEverything_Click">-O</Button>
             <TextBox Grid.Column="0" Grid.ColumnSpan="2" FontSize="20" TextWrapping="Wrap" Text=""  VerticalAlignment="Top" x:Name="Searchbar"/>
             <Button Grid.Column="1" Grid.Row="0" Click="Search_Click" Width="30" Margin="0,1" HorizontalAlignment="Right">-O</Button>
-            <ListBox x:Name="VisualStudio" Grid.Column="5" Grid.ColumnSpan="3"/>
+            <ComboBox x:Name="VisualStudio" Grid.Column="5" Grid.ColumnSpan="3"/>
             <Button Grid.Column="7" Grid.Row="0" Click="FindVS_Click" Width="30" HorizontalAlignment="Right">-O</Button>
 
         </Grid>
